Fix HTML structure and update links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
 <body>
   <div class="sidenav">
-  <a href="lycosa's-web">Blog</a>
+  <a href="lycosa's-web/index-blog">Blog</a>
   <a href="#">Art</a>
   <a href="#">Graphics</a>
   <a href="#">About</a>
@@ -324,3 +324,4 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
