Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@ font-family: 'basiic';
   <div class="window-body">
     <marquee direction="down" style="height: 255px">
       
-            <p><img src="data/images/stamps/stamps/pricefield.png"></p>
-            <p><img src="data/images/stamps/stamps/psy.gif"></p>
-            <p><img src="data/images/stamps/stamps/vriskakin.png"></p>
+            <p><img src="data/images/stamps/pricefield.png"></p>
+            <p><img src="data/images/stamps/psy.gif"></p>
+            <p><img src="data/images/stamps/vriskakin.png"></p>
             <p><img src="data/images/stamps/computernerd.gif"></p>
             <p><img src="data/images/stamps/urmusiclulz.gif"></p>
             <p><img src="data/images/stamps/aperturesci.jpg"></p>
@@ -324,4 +324,5 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
