Modify HTML structure and font source
Updated font source for 'basiic' and added new HTML structure.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <style>
 @font-face {
 font-family: 'basiic';
- src: url('https://file.garden/Zztv0a9yEhr5pmEq/basiic.ttf') format("truetype");
+ src: url('data/font/basiic.ttf') format("truetype");
  }
 </style> 
 
@@ -324,5 +324,6 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
