--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ font-family: 'basiic';
  
  
   <div id="divider">
-    <audio src="https://file.garden/aRY_eKC0BHrrKtoO/chopped-amen-break_165bpm_D_minor.wav" id="myAudio"></audio>
+    <audio src="data/sounds/soundfx/amenbr.mp3" id="myAudio"></audio>
             <img src="data/images/random/amen.png" style="width:700px; height:130px" onClick="playMyAudio()" />
             <script>
                 function playMyAudio() {
@@ -324,6 +324,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
