--- a/not_found.html
+++ b/not_found.html
@@ -10,7 +10,7 @@
 >
 
  <audio controls autoplay hidden>
-<source src="https://file.garden/aRY_eKC0BHrrKtoO/erro.mp3" type="audio/mpeg">
+<source src="data/sounds/soundfx/error.mp3" type="audio/mpeg">
 </audio> 
 
   </head>
