Refactor index.html for improved structure
Updated the HTML structure and fixed formatting issues.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <style>
 @font-face {
 font-family: 'basiic';
- src: url('data/font/basiic.ttf') format("truetype");
+ src: url('data/font/basiic/basiic.ttf') format("truetype");
  }
 </style> 
 
@@ -324,6 +324,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
