Fix HTML encoding issues and update styles

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   
   <style>
 @font-face {
-font-family: 'planb';
- src: url('data/font/PLANB__.TTF') format("truetype");
+font-family: 'basiic';
+ src: url('data/font/basiic(1).ttf') format("truetype");
  }
 </style> 
 
@@ -324,6 +324,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
