Fix HTML formatting and add missing elements

--- a/index.html
+++ b/index.html
@@ -314,16 +314,17 @@ My name is Lala/Lycosa, and this is my web(site).
 </div>
 </div>
 
-<div id="gladosimage">
+    <div id="gladosimage">
+    
+<img id="myPicture" width="400" id="myPicture" alt="loading image" style="max-height: 350px; max-width: 400px;">
 
-<img src="data/images/random/Glados.png">
-
-</div>
-
+ </div>
+    
  </div>
     </body>
 
 </html>
+
 
 
 
