Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ My name is Lala/Lycosa, and this is my web(site).
 
     <div id="gladosimage">
     
-<img id="myPicture" width="400" id="myPicture" alt="loading image" style="max-height: 350px; max-width: 400px;">
+<div id="mypicture"></div>
 
  </div>
     
@@ -324,6 +324,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
