Format HTML document and add random image feature

--- a/index.html
+++ b/index.html
@@ -314,16 +314,41 @@ My name is Lala/Lycosa, and this is my web(site).
 </div>
 </div>
 
-    <div id="gladosimage">
-    
-<div id="mypicture"></div>
+<script>
+        const pics = [
+            'url(
+"randomimg/alc.jpg")',
+            'url(
+"randomimg/beautifulsoul.jpg")',
+            'url(
+"randomimg/minesweeperhell.jpg")',
+            'url(
+"randomimg/map.jpg")',
+            'url(
+"randomimg/godgrantme.jpg")',
+            'url(
+"randomimg/situation.jpg")',
+            'url(
+"randomimg/webfunny.jpg")'
+    'url(
+"randomimg/evilandintimidating.jpg")'
+        ];
+        const pic = document.querySelector('section');
 
- </div>
+        function showImage() {
+            var a = Math.floor(Math.random() * pics.length);
+            var img = pics[a];
+            pic.style.backgroundImage = img;
+        }
+
+        setInterval(showImage, 1000);
+    </script>
     
  </div>
     </body>
 
 </html>
+
 
 
 
