--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     
 <body>
   <div class="sidenav">
-  <a href="lycosa's-web/index-blog">Blog</a>
-  <a href="#">Art</a>
-  <a href="#">Graphics</a>
-  <a href="#">About</a>
-  <a href="#">Askbox</a>
-  <a href="#">Shrines</a>
+  <a href="lycosa's-web/index-blog">\\ blogg</a>
+  <a href="#">\\ musik</a>
+  <a href="#">\\ grafik</a>
+  <a href="#">\\ konstverk</a>
+  <a href="#">\\ om mig</a>
+  <a href="#">\\ ingång</a>
 </div>
 <div class="main">
 
@@ -320,6 +320,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
