--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <a href="#">\\ grafik</a>
   <a href="#">\\ konstverk</a>
   <a href="#">\\ om mig</a>
-  <a href="#">\\ ingång</a>
+  <a href="#">\\ projekt</a>
 </div>
 <div class="main">
 
@@ -320,6 +320,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
