--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <a href="lycosa's-web/index-blog">\\ blogg</a>
   <a href="#">\\ musik</a>
   <a href="#">\\ grafik</a>
-  <a href="#">\\ konstverk</a>
+  <a href="#">\\ konst</a>
   <a href="#">\\ om mig</a>
   <a href="#">\\ projekt</a>
 </div>
@@ -320,6 +320,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
