--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 <body>
   <div class="sidenav">
   <a href="lycosa's-web/index-blog">\\ blogg</a>
-  <a href="#">\\ musik</a>
-  <a href="#">\\ grafik</a>
-  <a href="#">\\ konst</a>
-  <a href="#">\\ om mig</a>
-  <a href="#">\\ projekt</a>
+  <a href="#">\ musik</a>
+  <a href="#">\ grafik</a>
+  <a href="#">\ konst</a>
+  <a href="#">\ om mig</a>
+  <a href="#">\ projekt</a>
 </div>
 <div class="main">
 
@@ -320,6 +320,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
