--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
 <body>
   <div class="sidenav">
-  <a href="lycosa's-web/index-blog">\\ blogg</a>
+  <a href="lycosa's-web/index-blog">\ blogg</a>
   <a href="#">\ musik</a>
   <a href="#">\ grafik</a>
   <a href="#">\ konst</a>
@@ -320,6 +320,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
