--- a/aboutme.html
+++ b/aboutme.html
@@ -21,9 +21,10 @@
   <div class="sidenav">
   <a href="lycosa's-web/index-blog">\ blogg</a>
   <a href="#">\ musik</a>
+  <a href="lycosa.zip">\ hemsida</a>
   <a href="#">\ grafik</a>
   <a href="#">\ konst</a>
-  <a href="#">\ om mig</a>
+  <a href="/aboutme">\ om mig</a>
   <a href="#">\ projekt</a>
 </div>
 
