--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
   <div class="sidenav">
   <a href="lycosa's-web/index-blog">\ blogg</a>
   <a href="#">\ musik</a>
+  <a href="lycosa.zip">\ hemsida</a>
   <a href="#">\ grafik</a>
   <a href="#">\ konst</a>
-  <a href="#">\ om mig</a>
+  <a href="/aboutme">\ om mig</a>
   <a href="#">\ projekt</a>
 </div>
 <div class="main">
@@ -320,6 +321,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
