--- a/aboutme.html
+++ b/aboutme.html
@@ -26,6 +26,7 @@
   <a href="#">\ konst</a>
   <a href="/aboutme">\ om mig</a>
   <a href="#">\ projekt</a>
+<a href="#">\ teknologi</a>
 </div>
 
     </body>
