--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <a href="#">\ konst</a>
   <a href="/aboutme">\ om mig</a>
   <a href="#">\ projekt</a>
+        <a href="#">\ teknologi</a>
 </div>
 <div class="main">
 
@@ -321,6 +322,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
