--- a/index.html
+++ b/index.html
@@ -316,12 +316,13 @@ My name is Lala/Lycosa, and this is my web(site).
 </div>
 </div>
 
-
+<img src="data/images/ads/retrotechcollection.gif">
     
  </div>
     </body>
 
 </html>
+
 
 
 
