--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
   <div class="sidenav">
   <a href="lycosa's-web/index-blog">\blogg</a>
   <a href="#">\musik</a>
-  <a href="lycosa.zip">\hemsida</a>
+  <a href="https://lycosa.zip">\hemsida</a>
   <a href="#">\grafik</a>
   <a href="#">\konst</a>
   <a href="/aboutme">\om mig</a>
