--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="sidenav">
   <a href="lycosa's-web/index-blog">\blogg</a>
   <a href="#">\musik</a>
-  <a href="lycosa.zip">\hemsida</a>
+  <a href="https://lycosa.zip">\hemsida</a>
   <a href="#">\grafik</a>
   <a href="#">\konst</a>
   <a href="/aboutme">\om mig</a>
@@ -322,6 +322,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
