--- a/index.html
+++ b/index.html
@@ -316,12 +316,13 @@ My name is Lala/Lycosa, and this is my web(site).
 </div>
 </div>
 
-<img src="data/images/ads/retrotechcollection.gif"><img src="data/images/ads/warez4u.gif"><img src="data/images/ads/knfbanner.gif"><img src="data/images/ads/cds.gif">
+<img src="data/images/ads/retrotechcollection.gif"><img src="data/images/ads/warez4u.gif"><img src="data/images/ads/knfbanner.gif" href="https://allsop-lancaster.com/knf/"><img src="data/images/ads/cds.gif">
     
  </div>
     </body>
 
 </html>
+
 
 
 
