--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
   
     
 <body>
-  <div class="sidenav">
-  <a href="lycosa's-web/index-blog">\blogg</a>
-  <a href="#">\musik</a>
-  <a href="https://lycosa.zip">\hemsida</a>
-  <a href="#">\grafik</a>
-  <a href="#">\konst</a>
-  <a href="/aboutme">\om mig</a>
-  <a href="#">\projekt</a>
-        <a href="#">\teknologi</a>
+   <div class="sidenav">
+  <a href="lycosa's-web/index-blog">\blog</a>
+  <a href="#">\music</a>
+  <a href="https://lycosa.zip">\landing</a>
+  <a href="#">\graphics</a>
+  <a href="#">\characters</a>
+  <a href="/aboutme">\about me</a>
+  <a href="#">\projects</a>
+        <a href="#">\technology</a>
 </div>
 <div class="main">
 
@@ -322,6 +322,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
