--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <a href="#">\music</a>
   <a href="https://lycosa.zip">\landing</a>
   <a href="#">\graphics</a>
-  <a href="#">\characters</a>
-  <a href="/aboutme">\about me</a>
+  <a href="#">\residents</a>
+  <a href="/aboutme">\about</a>
   <a href="#">\projects</a>
-        <a href="#">\technology</a>
+        <a href="#">\tech</a>
 </div>
 <div class="main">
 
@@ -322,6 +322,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
