--- a/aboutme.html
+++ b/aboutme.html
@@ -18,15 +18,15 @@
   
     
 <body>
-  <div class="sidenav">
+ <div class="sidenav">
   <a href="lycosa's-web/index-blog">\blog</a>
   <a href="#">\music</a>
   <a href="https://lycosa.zip">\landing</a>
   <a href="#">\graphics</a>
-  <a href="#">\characters</a>
-  <a href="/aboutme">\about me</a>
+  <a href="#">\residents</a>
+  <a href="/aboutme">\about</a>
   <a href="#">\projects</a>
-        <a href="#">\technology</a>
+        <a href="#">\tech</a>
 </div>
 
     </body>
