--- a/warez.html
+++ b/warez.html
@@ -1,1 +1,4 @@
-<a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">VST3</a>
+<a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download ISO</a>
+<a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download ISO</a>
+<a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso2/mscomputerdic3rd.zip" class="dlink">Download ISO</a>
+<a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso3/TVphotoviewer.zip" class="dlink">Download ISO</a>
