--- a/warez.html
+++ b/warez.html
@@ -29,6 +29,7 @@
   <a href="/aboutme">\about</a>
   <a href="#">\projects</a>
         <a href="#">\tech</a>
+        <a href="#">\warez</a>
 </div>
 
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download ISO</a>
