--- a/warez.html
+++ b/warez.html
@@ -33,7 +33,28 @@
 </div>
 
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download ISO</a>
-<a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download ISO</a>
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso2/mscomputerdic3rd.zip" class="dlink">Download ISO</a>
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso3/TVphotoviewer.zip" class="dlink">Download ISO</a>
+
+
+<div class="window" style="width: 300px">
+  <div class="title-bar">
+    <div class="title-bar-text">windows xp pro</div>
+    <div class="title-bar-controls">
+      <button aria-label="Minimize"></button>
+      <button aria-label="Maximize"></button>
+      <button aria-label="Close"></button>
+    </div>
+  </div>
+  <div class="window-body">
+      <Img src="lycosa/data/images/random/xpspin.gif"> 
+    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download ISO</a></p>
+  </div>
+</div>
+
+
+
+
+    
 </body>
+</html>
