--- a/warez.html
+++ b/warez.html
@@ -29,7 +29,7 @@
   <a href="/aboutme">\about</a>
   <a href="#">\projects</a>
         <a href="#">\tech</a>
-        <a href="#">\warez</a>
+        <a href="/warez">\warez</a>
 </div>
 
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download ISO</a>
@@ -52,6 +52,20 @@
   </div>
 </div>
 
+<div class="window" style="width: 300px">
+  <div class="title-bar">
+    <div class="title-bar-text">windows xp pro</div>
+    <div class="title-bar-controls">
+      <button aria-label="Minimize"></button>
+      <button aria-label="Maximize"></button>
+      <button aria-label="Close"></button>
+    </div>
+  </div>
+  <div class="window-body">
+      <Img src="lycosa/data/images/random/3dspin.gif"> 
+    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/TVphotoviewer.zip" class="dlink">Download ISO</a></p>
+  </div>
+</div>
 
 
 
