--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <a href="/aboutme">\about</a>
   <a href="#">\projects</a>
         <a href="#">\tech</a>
+         <a href="/warez">\warez</a>
 </div>
 <div class="main">
 
@@ -329,6 +330,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
