--- a/aboutme.html
+++ b/aboutme.html
@@ -27,6 +27,7 @@
   <a href="/aboutme">\about</a>
   <a href="#">\projects</a>
         <a href="#">\tech</a>
+       <a href="/warez">\warez</a>
 </div>
 
     </body>
