--- a/warez.html
+++ b/warez.html
@@ -36,7 +36,7 @@
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso2/mscomputerdic3rd.zip" class="dlink">Download ISO</a>
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso3/TVphotoviewer.zip" class="dlink">Download ISO</a>
 
-
+<div class="windows4downloads">
 <div class="window" style="width: 300px">
   <div class="title-bar">
     <div class="title-bar-text">windows xp pro</div>
@@ -66,7 +66,7 @@
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/TVphotoviewer.zip" class="dlink">Download ISO</a></p>
   </div>
 </div>
-
+  </div>
 
 
     
