--- a/warez.html
+++ b/warez.html
@@ -48,7 +48,8 @@
   </div>
   <div class="window-body">
       <Img src="data/images/random/xpspin.gif"> 
-    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download ISO</a></p>
+    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download zipped ISO</a></p>
+        <p>everyone knows windows xp, and this is just a ripped iso image from one of my physical discs. pro edition</p>
   </div>
 </div>
 
@@ -63,7 +64,8 @@
   </div>
   <div class="window-body">
       <Img src="data/images/random/3dspin.gif"> 
-    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/TVphotoviewer.zip" class="dlink">Download ISO</a></p>
+    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/TVphotoviewer.zip" class="dlink">Download zipped ISO</a></p>
+      <p>a pretty fun software to play around with. comes with many .wmf clipart images. very fun to use and fuck around with, and the ui is based on whatever os you operate on.</p>
   </div>
 </div>
   </div>
