--- a/warez.html
+++ b/warez.html
@@ -32,6 +32,31 @@
         <a href="/warez">\warez</a>
 </div>
 
+    <div class="window">
+  <div class="title-bar">
+    <div class="title-bar-text">info.exe</div>
+    <div class="title-bar-controls">
+      <button aria-label="Minimize"></button>
+      <button aria-label="Maximize"></button>
+      <button aria-label="Close"></button>
+    </div>
+  </div>
+  <div class="window-body">
+    <pre>
+                              █████     ███                      
+                     ▒▒███     ▒▒▒                       
+ ████████    ██████  ███████   ████   ██████   ██████  ██
+▒▒███▒▒███  ███▒▒███▒▒▒███▒   ▒▒███  ███▒▒███ ███▒▒███▒▒ 
+ ▒███ ▒███ ▒███ ▒███  ▒███     ▒███ ▒███ ▒▒▒ ▒███████    
+ ▒███ ▒███ ▒███ ▒███  ▒███ ███ ▒███ ▒███  ███▒███▒▒▒     
+ ████ █████▒▒██████   ▒▒█████  █████▒▒██████ ▒▒██████  ██
+▒▒▒▒ ▒▒▒▒▒  ▒▒▒▒▒▒     ▒▒▒▒▒  ▒▒▒▒▒  ▒▒▒▒▒▒   ▒▒▒▒▒▒  ▒▒ 
+
+All of these files are ripped from my physical collection, and are outdated/abandonware.
+    </pre>
+  </div>
+</div>
+    
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download ISO</a>
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso2/mscomputerdic3rd.zip" class="dlink">Download ISO</a>
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso3/TVphotoviewer.zip" class="dlink">Download ISO</a>
