--- a/warez.html
+++ b/warez.html
@@ -32,7 +32,7 @@
         <a href="/warez">\warez</a>
 </div>
 
-    <div class="window" style="width:auto;">
+    <div class="window" style="width:500px;">
   <div class="title-bar">
     <div class="title-bar-text">info.exe</div>
     <div class="title-bar-controls">
