--- a/warez.html
+++ b/warez.html
@@ -32,6 +32,8 @@
         <a href="/warez">\warez</a>
 </div>
 
+    <div id="warning">
+
     <div class="window" style="width:500px;">
   <div class="title-bar">
     <div class="title-bar-text">info.exe</div>
@@ -55,6 +57,7 @@
 All of these files are ripped from my physical collection, and are outdated/abandonware.
     </pre>
   </div>
+</div>
 </div>
     
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download ISO</a>
