--- a/warez.html
+++ b/warez.html
@@ -74,7 +74,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
       <button aria-label="Close"></button>
     </div>
   </div>
-  <div class="window-body">
+    <div class="window-body" style="font-size:1.2rem;">
       <Img src="data/images/random/xpspin.gif"> 
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download zipped ISO</a></p>
         <p>everyone knows windows xp, and this is just a ripped iso image from one of my physical discs. pro edition</p>
@@ -90,7 +90,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
       <button aria-label="Close"></button>
     </div>
   </div>
-  <div class="window-body">
+  <div class="window-body" style="font-size:1.2rem;">
       <Img src="data/images/random/3dspin.gif"> 
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/TVphotoviewer.zip" class="dlink">Download zipped ISO</a></p>
       <p>a pretty fun software to play around with. comes with many .wmf clipart images. very fun to use and fuck around with, and the ui is based on whatever os you operate on.</p>
