--- a/warez.html
+++ b/warez.html
@@ -45,7 +45,7 @@
   </div>
   <div class="window-body">
     <pre>
-                              █████     ███                      
+                              █████                         
                      ▒▒███     ▒▒▒                       
  ████████    ██████  ███████   ████   ██████   ██████  ██
 ▒▒███▒▒███  ███▒▒███▒▒▒███▒   ▒▒███  ███▒▒███ ███▒▒███▒▒ 
@@ -83,7 +83,24 @@ All of these files are ripped from my physical collection, and are outdated/aban
 
 <div class="window" style="width: 300px">
   <div class="title-bar">
-    <div class="title-bar-text">windows xp pro</div>
+    <div class="title-bar-text">computer dictionary 3</div>
+    <div class="title-bar-controls">
+      <button aria-label="Minimize"></button>
+      <button aria-label="Maximize"></button>
+      <button aria-label="Close"></button>
+    </div>
+  </div>
+    <div class="window-body" style="font-size:1.2rem;">
+      <Img src="data/images/random/dictionaryspin.gif"> 
+    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso2/mscomputerdic3rd.zip" class="dlink">Download zipped ISO</a></p>
+        <p>a dumb computer dictionary microsoft released for windows 95/98. interesting graphics and possible text for graphic design. came with a physical book and this disc.</p>
+  </div>
+</div>
+
+    
+<div class="window" style="width: 300px">
+  <div class="title-bar">
+    <div class="title-bar-text">click n design 3d</div>
     <div class="title-bar-controls">
       <button aria-label="Minimize"></button>
       <button aria-label="Maximize"></button>
@@ -92,7 +109,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
   </div>
   <div class="window-body" style="font-size:1.2rem;">
       <Img src="data/images/random/3dspin.gif"> 
-    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/TVphotoviewer.zip" class="dlink">Download zipped ISO</a></p>
+    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download zipped ISO</a></p>
       <p>a pretty fun software to play around with. comes with many .wmf clipart images. very fun to use and fuck around with, and the ui is based on whatever os you operate on.</p>
   </div>
 </div>
