--- a/warez.html
+++ b/warez.html
@@ -60,8 +60,6 @@ All of these files are ripped from my physical collection, and are outdated/aban
 </div>
 </div>
     
-<a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download ISO</a>
-<a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso2/mscomputerdic3rd.zip" class="dlink">Download ISO</a>
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso3/TVphotoviewer.zip" class="dlink">Download ISO</a>
 
 <div class="windows4downloads">
@@ -91,7 +89,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
     </div>
   </div>
     <div class="window-body" style="font-size:1.2rem;">
-      <Img src="data/images/random/dictionaryspin.gif"> 
+      <Img src="data/images/random/dictionaryspin.gif" style="width:300px"> 
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso2/mscomputerdic3rd.zip" class="dlink">Download zipped ISO</a></p>
         <p>a dumb computer dictionary microsoft released for windows 95/98. interesting graphics and possible text for graphic design. came with a physical book and this disc.</p>
   </div>
