--- a/warez.html
+++ b/warez.html
@@ -63,7 +63,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso3/TVphotoviewer.zip" class="dlink">Download ISO</a>
 
 <div class="windows4downloads">
-<div class="window" style="width: 300px height: 600px;">
+<div class="window" style="width: 300px; max-height: 600px;">
   <div class="title-bar">
     <div class="title-bar-text">windows xp pro</div>
     <div class="title-bar-controls">
@@ -79,7 +79,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
   </div>
 </div>
 
-<div class="window" style="width: 300px height: 600px;">
+<div class="window" style="width: 300px; max-height: 600px;">
   <div class="title-bar">
     <div class="title-bar-text">computer dictionary 3</div>
     <div class="title-bar-controls">
@@ -96,7 +96,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
 </div>
 
     
-<div class="window" style="width: 300px height: 600px;">
+<div class="window" style="width: 300px; max-height: 600px;">
   <div class="title-bar">
     <div class="title-bar-text">click n design 3d</div>
     <div class="title-bar-controls">
