--- a/warez.html
+++ b/warez.html
@@ -63,7 +63,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
 <a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso3/TVphotoviewer.zip" class="dlink">Download ISO</a>
 
 <div class="windows4downloads">
-<div class="window" style="width: 300px; height: 600px;">
+<div class="window" style="width: 300px; max-height: 600px;">
   <div class="title-bar">
     <div class="title-bar-text">windows xp pro</div>
     <div class="title-bar-controls">
