--- a/warez.html
+++ b/warez.html
@@ -75,7 +75,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
     <div class="window-body" style="font-size:1.2rem;">
       <Img src="data/images/random/xpspin.gif"> 
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download zipped ISO</a></p>
-        <p>everyone knows windows xp, and this is just a ripped iso image from one of my physical discs. pro edition</p>
+        <p>everyone knows windows xp, and this is just a ripped iso image from one of my physical discs. comes with no service pack, but is pro edition</p>
   </div>
 </div>
 
