--- a/warez.html
+++ b/warez.html
@@ -108,7 +108,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
   <div class="window-body" style="font-size:1.2rem;">
       <Img src="data/images/random/3dspin.gif"> 
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download zipped ISO</a></p>
-      <p>a pretty fun software to play around with. comes with many .wmf clipart images. very fun to use and fuck around with, and the ui is based on whatever os you operate on.</p>
+      <p>a pretty fun software to play around with. comes with many .wmf clipart images. very fun to use and fuck around with, ui based on your os.</p>
   </div>
 </div>
   </div>
