--- a/warez.html
+++ b/warez.html
@@ -89,7 +89,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
     </div>
   </div>
     <div class="window-body" style="font-size:1.2rem;">
-      <Img src="data/images/random/dicspin.gif"> 
+      <Img src="data/images/random/dicspin.gif" style="width:173; height:171;"> 
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso2/mscomputerdic3rd.zip" class="dlink">Download zipped ISO</a></p>
         <p>a dumb computer dictionary microsoft released for windows 95/98. interesting graphics and possible text for graphic design. came with a physical book and this disc.</p>
   </div>
