--- a/warez.html
+++ b/warez.html
@@ -73,7 +73,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
     </div>
   </div>
     <div class="window-body" style="font-size:1.2rem;">
-      <Img src="data/images/random/winspin1.gif"> 
+      <Img src="data/images/random/winspin1.gif" style="width:173px; height:171px;"> 
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download zipped ISO</a></p>
         <p>everyone knows windows xp, and this is just a ripped iso image from one of my physical discs. comes with no service pack, but is pro edition</p>
   </div>
@@ -106,7 +106,7 @@ All of these files are ripped from my physical collection, and are outdated/aban
     </div>
   </div>
   <div class="window-body" style="font-size:1.2rem;">
-      <Img src="data/images/random/clickspin.gif"> 
+      <Img src="data/images/random/clickspin.gif" style="width:173px; height:171px;"> 
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download zipped ISO</a></p>
       <p>a pretty fun software to play around with. comes with many .wmf clipart images. very fun to use and fuck around with, ui based on your os.</p>
   </div>
