--- a/warez.html
+++ b/warez.html
@@ -54,7 +54,7 @@
  ████ █████▒▒██████   ▒▒█████  █████▒▒██████ ▒▒██████  ██
 ▒▒▒▒ ▒▒▒▒▒  ▒▒▒▒▒▒     ▒▒▒▒▒  ▒▒▒▒▒  ▒▒▒▒▒▒   ▒▒▒▒▒▒  ▒▒ 
 
-All of these files are ripped from my physical collection, and are outdated/abandonware.
+All of these files are ripped from my physical collection, and are outdated/abandonware no longer produced. i am not responsible if any data is corrupt or missing, as the disc images are 
     </pre>
   </div>
 </div>
@@ -73,7 +73,21 @@ All of these files are ripped from my physical collection, and are outdated/aban
     </div>
   </div>
     <div class="window-body" style="font-size:1.2rem;">
-      <Img src="data/images/random/winspin1.gif" style="width:173px; height:171px;"> 
+        <img id="winspim" src="data/images/random/winspin1.gif" style="width:173px; height:171px;"/>
+
+<script>
+    $(function() {
+        $("#winspin").hover(
+            function() {
+                $(this).attr("src", "data/images/random/winspin1.gif" "style", "width:173px; height:171px;");
+            },
+            function() {
+                $(this).attr("src", "data/images/random/winspinstatic.png" "style", "width:173px; height:171px;");
+            }                         
+        );                  
+    });
+</script>
+
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download zipped ISO</a></p>
         <p>everyone knows windows xp, and this is just a ripped iso image from one of my physical discs. comes with no service pack, but is pro edition</p>
   </div>
@@ -89,7 +103,20 @@ All of these files are ripped from my physical collection, and are outdated/aban
     </div>
   </div>
     <div class="window-body" style="font-size:1.2rem;">
-      <Img src="data/images/random/dicspin.gif" style="width:173px; height:171px;"> 
+        <img id="dicspim" src="data/images/random/dicspin.gif" style="width:173px; height:171px;"/>
+
+<script>
+    $(function() {
+        $("#winspin").hover(
+            function() {
+                $(this).attr("src", "data/images/random/dicspin.gif" "style", "width:173px; height:171px;");
+            },
+            function() {
+                $(this).attr("src", "data/images/random/dicspinstatic.png" "style", "width:173px; height:171px;");
+            }                         
+        );                  
+    });
+</script>
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso2/mscomputerdic3rd.zip" class="dlink">Download zipped ISO</a></p>
         <p>a dumb computer dictionary microsoft released for windows 95/98. interesting graphics and possible text for graphic design. came with a physical book and this disc.</p>
   </div>
@@ -106,7 +133,20 @@ All of these files are ripped from my physical collection, and are outdated/aban
     </div>
   </div>
   <div class="window-body" style="font-size:1.2rem;">
-      <Img src="data/images/random/clickspin.gif" style="width:173px; height:171px;"> 
+       <img id="clickspin" src="data/images/random/clickspin.gif" style="width:173px; height:171px;"/>
+
+<script>
+    $(function() {
+        $("#clickspin").hover(
+            function() {
+                $(this).attr("src", "data/images/random/clickspin.gif" "style", "width:173px; height:171px;");
+            },
+            function() {
+                $(this).attr("src", "data/images/random/clickspinstatic.png" "style", "width:173px; height:171px;");
+            }                         
+        );                  
+    });
+</script>
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download zipped ISO</a></p>
       <p>a pretty fun software to play around with. comes with many .wmf clipart images. very fun to use and fuck around with, ui based on your os.</p>
   </div>
