--- a/warez.html
+++ b/warez.html
@@ -54,9 +54,8 @@
  ████ █████▒▒██████   ▒▒█████  █████▒▒██████ ▒▒██████  ██
 ▒▒▒▒ ▒▒▒▒▒  ▒▒▒▒▒▒     ▒▒▒▒▒  ▒▒▒▒▒  ▒▒▒▒▒▒   ▒▒▒▒▒▒  ▒▒ 
 
-All of these files are ripped from my physical collection, and are outdated/abandonware no longer produced. 
-i am not responsible if any data is corrupt or missing, as the disc images are 
-    </pre>
+All of these files are ripped from my physical collection, and are outdated/abandonware 
+no longer produced. i am not responsible if any data is corrupt or missing.</pre>
   </div>
 </div>
 </div>
