--- a/warez.html
+++ b/warez.html
@@ -73,7 +73,7 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
     </div>
   </div>
     <div class="window-body" style="font-size:1.2rem;">
-        <img id="winspim" src="data/images/random/winspinstatic.png" style="width:173px; height:171px;"/>
+        <img id="winspin" src="data/images/random/winspinstatic.png" style="width:173px; height:171px;"/>
 
 <script>
     $(function() {
