--- a/warez.html
+++ b/warez.html
@@ -81,7 +81,11 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
             function() {
                  function() {
                 $(this).attr("src", "data/images/random/winspin1.gif" "style", "width:173px; height:171px;");
+                
             },
+              function() {
+                $(this).attr("src", "data/images/random/dicspinstatic.png" "style", "width:173px; height:171px;");
+            }                   
         );                  
     });
 </script>
