--- a/warez.html
+++ b/warez.html
@@ -105,11 +105,11 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
     </div>
   </div>
     <div class="window-body" style="font-size:1.2rem;">
-        <img id="dicspim" src="data/images/random/dicspin.gif" style="width:173px; height:171px;"/>
+        <img id="dicspim" src="data/images/random/dicspinstatic.png" style="width:173px; height:171px;"/>
 
 <script>
     $(function() {
-        $("#winspin").hover(
+        $("#dicspin").hover(
             function() {
                 $(this).attr("src", "data/images/random/dicspin.gif" "style", "width:173px; height:171px;");
             },
