--- a/warez.html
+++ b/warez.html
@@ -59,14 +59,16 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
   </div>
 </div>
 </div>
-<s tyle>.static {
+<style>
+    .static {
   position:absolute;
   background: white;
 }
 
 .static:hover {
   opacity:0;
-}</style>
+}
+</style>
 
 
     
