--- a/warez.html
+++ b/warez.html
@@ -60,6 +60,14 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
 </div>
 </div>
 <style>
+
+    .active::before{
+opacity:0;
+
+
+        
+    }
+    
     .static {
   position:absolute;
 }
