--- a/warez.html
+++ b/warez.html
@@ -61,7 +61,7 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
 </div>
 <style>
 
-    .active::before{
+    .active::before::hover{
 opacity:0;
 
 
