--- a/warez.html
+++ b/warez.html
@@ -61,18 +61,10 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
 </div>
 <style>
 
-    .active {
-opacity:0;
-        
-    }
-
-     .active:hover{
-opacity:100;
-        
-    }
   
     .static {
   position:absolute;
+        background:#e3e5d0;
 }
 
 .static:hover {
