--- a/warez.html
+++ b/warez.html
@@ -64,7 +64,7 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
   
     .static {
   position:absolute;
-        background:#e3e5d0;
+        background:#ece9d8;
 }
 
 .static:hover {
@@ -105,20 +105,8 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
     </div>
   </div>
     <div class="window-body" style="font-size:1.2rem;">
-        <img id="dicspim" src="data/images/random/dicspinstatic.png" style="width:173px; height:171px;"/>
-
-<script>
-    $(function() {
-        $("#dicspin").hover(
-            function() {
-                $(this).attr("src", "data/images/random/dicspin.gif" "style", "width:173px; height:171px;");
-            },
-            function() {
-                $(this).attr("src", "data/images/random/dicspinstatic.png" "style", "width:173px; height:171px;");
-            }                         
-        );                  
-    });
-</script>
+        <img class="static" src="data/images/random/dicspinstatic.png" style="width:173px; height:171px;"/>
+        <img class="active" src="data/images/random/dicspin.gif" style="width:173px; height:171px;"/>
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso2/mscomputerdic3rd.zip" class="dlink">Download zipped ISO</a></p>
         <p>a dumb computer dictionary microsoft released for windows 95/98. interesting graphics and possible text for graphic design. came with a physical book and this disc.</p>
   </div>
@@ -135,20 +123,8 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
     </div>
   </div>
   <div class="window-body" style="font-size:1.2rem;">
-       <img id="clickspin" src="data/images/random/clickspin.gif" style="width:173px; height:171px;"/>
-
-<script>
-    $(function() {
-        $("#clickspin").hover(
-            function() {
-                $(this).attr("src", "data/images/random/clickspin.gif" "style", "width:173px; height:171px;");
-            },
-            function() {
-                $(this).attr("src", "data/images/random/clickspinstatic.png" "style", "width:173px; height:171px;");
-            }                         
-        );                  
-    });
-</script>
+     <img class="static" src="data/images/random/clickspinstatic.png" style="width:173px; height:171px;"/>
+ <img class="active" src="data/images/random/clickspin.gif" style="width:173px; height:171px;"/>
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download zipped ISO</a></p>
       <p>a pretty fun software to play around with. comes with many .wmf clipart images. very fun to use and fuck around with, ui based on your os.</p>
   </div>
