--- a/warez.html
+++ b/warez.html
@@ -129,6 +129,27 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
       <p>a pretty fun software to play around with. comes with many .wmf clipart images. very fun to use and fuck around with, ui based on your os.</p>
   </div>
 </div>
+
+
+<div class="window" style="width: 300px;">
+  <div class="title-bar">
+    <div class="title-bar-text">tv photo viewer</div>
+    <div class="title-bar-controls">
+      <button aria-label="Minimize"></button>
+      <button aria-label="Maximize"></button>
+      <button aria-label="Close"></button>
+    </div>
+  </div>
+    <div class="window-body" style="font-size:1.2rem;">
+        <img class="static" src="data/images/random/tvstatic.png" style="width:173px; height:171px;"/>
+          <img class="active" src="data/images/random/tvspin.gif" style="width:173px; height:171px;"/>
+
+    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download zipped ISO</a></p>
+        <p>weird software i picked up at goodwill. gives you the ability to put photos onto a floppy disk using the specific drive.</p>
+  </div>
+</div>
+
+    
   </div>
 
 
