--- a/warez.html
+++ b/warez.html
@@ -131,7 +131,7 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
 </div>
 
 
-<div class="window" style="width: 300px;">
+<br><div class="window" style="width: 300px;">
   <div class="title-bar">
     <div class="title-bar-text">tv photo viewer</div>
     <div class="title-bar-controls">
@@ -144,11 +144,11 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
         <img class="static" src="data/images/random/tvstatic.png" style="width:173px; height:171px;"/>
           <img class="active" src="data/images/random/tvspin.gif" style="width:173px; height:171px;"/>
 
-    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download zipped ISO</a></p>
+    <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso3/TVphotoviewer.zip" class="dlink">Download zipped ISO</a></p>
         <p>weird software i picked up at goodwill. gives you the ability to put photos onto a floppy disk using the specific drive.</p>
   </div>
 </div>
-
+</br>
     
   </div>
 
