--- a/warez.html
+++ b/warez.html
@@ -131,7 +131,8 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
 </div>
 
 
-<p><div class="window" style="width: 300px;">
+<div id="below">    
+<div class="window" style="width: 300px;">
   <div class="title-bar">
     <div class="title-bar-text">tv photo viewer</div>
     <div class="title-bar-controls">
@@ -148,7 +149,7 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
         <p>weird software i picked up at goodwill. gives you the ability to put photos onto a floppy disk using the specific drive.</p>
   </div>
 </div>
-</p>
+</div>
     
   </div>
 
