--- a/warez.html
+++ b/warez.html
@@ -132,7 +132,7 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
   </div>
 
 <div id="below">    
-<div class="window" style="width: 300px;">
+<div class="window" style="min-width: 300px;">
   <div class="title-bar">
     <div class="title-bar-text">tv photo viewer</div>
     <div class="title-bar-controls">
