--- a/residents.html
+++ b/residents.html
@@ -44,15 +44,15 @@
     <p>
 <table>
     <tbody><tr><td rowspan="9" style="background-image:url('hl/char/aurastys.png')" class="art"></td>
-    <td>ALIAS:</td><th>Aurastys</th></tr>
-    <tr><td>NAME:</td><th>▗█▙▔▝▏▒█▒▏▀▟▌▛▜▝</th></tr>
-    <tr><td>SPECIES:</td><th>chozo</th></tr>
-    <tr><td>ID:</td><th>▜▚▙█▔▚█▓▒▜▕▙▙▓▝▗</th></tr>
-    <tr><td>HEIGHT:</td><th>173cm / 5'8"</th></tr>
-    <tr><td>FORM:</td><th>historical</th></tr>
-    <tr><td>WHERE:</td><th>N/A (deceased)</th></tr>
-    <tr><td>FOOD:</td><th>▖▀▔▌▞▒▙▓▙▒▟▛▘▟▝▖</th></tr>
-    <tr><td colspan="2" rowspan="2" class="desc">their writing was discovered many epochs after their passing. it seems as though they carried the burden of premonitory knowledge, as events they foretold continue to play out.</td></tr>
+    <td>ALIAS:</td><th>Litterbug</th></tr>
+    <tr><td>NAME:</td><th>Lala</th></tr>
+    <tr><td>SPECIES:</td><th>???</th></tr>
+    <tr><td>ID:</td><th>she/her</th></tr>
+    <tr><td>HEIGHT:</td><th>5'5"</th></tr>
+    <tr><td>SEXUALITY:</td><th>lesbian</th></tr>
+    <tr><td>RELATION:</td><th>???</th></tr>
+    <tr><td>FOOD:</td><th>hotpot</th></tr>
+    <tr><td colspan="2" rowspan="2" class="desc">the head of all operations and projects. she's the one constantly on the hunt for anything retro tech related.</td></tr>
     </tbody></table>
 
 
