--- a/residents.html
+++ b/residents.html
@@ -30,7 +30,7 @@
        <a href="/warez">\warez</a>
 </div>
 
-
+<div id="litterbug">
   <div class="window" style="width: 300px">
   <div class="title-bar">
     <div class="title-bar-text">litterbug.exe</div>
@@ -61,7 +61,7 @@
     </p>
   </div>
 </div>
-
+</div>
   
     </body>
 
