--- a/residents.html
+++ b/residents.html
@@ -10,6 +10,7 @@
       
       <link rel="stylesheet" href="residents.css">
          <link rel="stylesheet" href="index.css">
+             <link rel="stylesheet" href="css.css">
         <link rel="stylesheet" href="https://unpkg.com/xp.css">
       
     </head>
