--- a/residents.html
+++ b/residents.html
@@ -44,7 +44,7 @@
   <div class="window-body">
     <p>
 <table>
-    <tbody><tr><td rowspan="9" style="background-image:url('hl/char/aurastys.png')" class="art"></td>
+    <tbody><tr><td rowspan="9" style="background-image:url('hl/char/aurastys.png')" class="art" style="font-size:1.2rem;" ></td>
     <td>ALIAS:</td><th>Litterbug</th></tr>
     <tr><td>NAME:</td><th>Lala</th></tr>
     <tr><td>SPECIES:</td><th>???</th></tr>
