--- a/residents.html
+++ b/residents.html
@@ -42,9 +42,9 @@
     </div>
   </div>
   <div class="window-body">
-    <p>
+    <p style="font-size:1.2rem;>
 <table>
-    <tbody><tr><td rowspan="9" style="background-image:url('hl/char/aurastys.png')" class="art" style="font-size:1.2rem;" ></td>
+    <tbody><tr><td rowspan="9" style="background-image:url('hl/char/aurastys.png')" class="art" ></td>
     <td>ALIAS:</td><th>Litterbug</th></tr>
     <tr><td>NAME:</td><th>Lala</th></tr>
     <tr><td>SPECIES:</td><th>???</th></tr>
