--- a/residents.html
+++ b/residents.html
@@ -42,10 +42,14 @@
     </div>
   </div>
   <div class="window-body">
-    <p>
-
+    <pre>
+▄▄▌  ▪  ▄▄▄▄▄▄▄▄▄▄▄▄▄ .▄▄▄  ▄▄▄▄· ▄• ▄▌ ▄▄ • 
+██•  ██ •██  •██  ▀▄.▀·▀▄ █·▐█ ▀█▪█▪██▌▐█ ▀ ▪
+██▪  ▐█· ▐█.▪ ▐█.▪▐▀▀▪▄▐▀▀▄ ▐█▀▀█▄█▌▐█▌▄█ ▀█▄
+▐█▌▐▌▐█▌ ▐█▌· ▐█▌·▐█▄▄▌▐█•█▌██▄▪▐█▐█▄█▌▐█▄▪▐█
+.▀▀▀ ▀▀▀ ▀▀▀  ▀▀▀  ▀▀▀ .▀  ▀·▀▀▀▀  ▀▀▀ ·▀▀▀▀ 
       
-    </p>
+    </pre>
         </div>
   </div>
 </div>
