--- a/residents.html
+++ b/residents.html
@@ -32,7 +32,7 @@
 </div>
 
 <div id="litterbug">
-  <div class="window" style="width: 300px">
+  <div class="window" style="width: auto;">
   <div class="title-bar">
     <div class="title-bar-text">litterbug.exe</div>
     <div class="title-bar-controls">
