--- a/residents.html
+++ b/residents.html
@@ -48,7 +48,9 @@
 ██▪  ▐█· ▐█.▪ ▐█.▪▐▀▀▪▄▐▀▀▄ ▐█▀▀█▄█▌▐█▌▄█ ▀█▄
 ▐█▌▐▌▐█▌ ▐█▌· ▐█▌·▐█▄▄▌▐█•█▌██▄▪▐█▐█▄█▌▐█▄▪▐█
 .▀▀▀ ▀▀▀ ▀▀▀  ▀▀▀  ▀▀▀ .▀  ▀·▀▀▀▀  ▀▀▀ ·▀▀▀▀ 
-      
+ The brains behind it all. Nobody knows what she really
+ is, or <i>who</i> she really is, but one day she started
+ it all.
     </pre>
         </div>
   </div>
