--- a/residents.html
+++ b/residents.html
@@ -49,8 +49,7 @@
 ▐█▌▐▌▐█▌ ▐█▌· ▐█▌·▐█▄▄▌▐█•█▌██▄▪▐█▐█▄█▌▐█▄▪▐█
 .▀▀▀ ▀▀▀ ▀▀▀  ▀▀▀  ▀▀▀ .▀  ▀·▀▀▀▀  ▀▀▀ ·▀▀▀▀ 
 The brains behind it all. Nobody knows what she really
-is, or <i>who</i> she really is, but one day she started
-it all.
+is, or <i>who</i> she really is, but she started it.
     </pre>
         </div>
   </div>
