--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
   <a href="#">\graphics</a>
   <a href="#">\residents</a>
   <a href="/aboutme">\about</a>
-  <a href="#">\projects</a>
+       <li><input id="1" type="checkbox" class="box">
+	<label for="1">+ </label>
+	<a href="/stuff">stuff</a>
+		<ul class="cool">
+			<li>$ <a href="/stuff/my-warez" target="_blank">warez</a></li>
+            <li>$ <a href="/stuff/games" target="_blank">games</a></li>
+            <li>$ <a href="/stuff/tools" target="_blank">tools</a></li>
+		</ul>
+	</li>
         <a href="#">\tech</a>
-         <a href="/warez">\warez</a>
+         
 </div>
 <div class="main">
 
@@ -165,6 +173,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
