--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ window.addEventListener('change', save);
 	<label for="1">+</label>
 	<a href="/stuff">stuff</a>
 		<ul class="cool">
-<li>$<a href="/stuff/my-warez" target="_blank">warez</a></li>
-<li>$<a href="/stuff/games" target="_blank">games</a></li>
-<li>$ <a href="/stuff/tools" target="_blank">tools</a></li>
+<li><a href="/stuff/my-warez" target="_blank">warez</a></li>
+<li><a href="/stuff/games" target="_blank">games</a></li>
+<li><a href="/stuff/tools" target="_blank">tools</a></li>
 		</ul>
 	</li>
         <a href="#">\tech</a>
@@ -191,6 +191,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
