--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@ window.addEventListener('change', save);
   <a href="#">\graphics</a>
   <a href="#">\residents</a>
   <a href="/aboutme">\about</a>
-       <li><input id="1" type="checkbox" class="box">
-	<label for="1">+</label>
-	<a href="/stuff">stuff</a>
+       <li><input id="1" type="checkbox" class="box"><a href="/stuff">stuff</a>
 		<ul class="cool">
 <li><a href="/stuff/my-warez" target="_blank">warez</a></li>
 <li><a href="/stuff/games" target="_blank">games</a></li>
@@ -191,6 +189,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
