--- a/index.html
+++ b/index.html
@@ -39,19 +39,13 @@ window.addEventListener('change', save);
     
 <body>
    <div class="sidenav">
+	       <a href="/warez">\warez</a>
   <a href="lycosa's-web/index-blog">\blog</a>
   <a href="#">\music</a>
   <a href="https://lycosa.zip">\landing</a>
   <a href="#">\graphics</a>
   <a href="#">\residents</a>
   <a href="/aboutme">\about</a>
-       <li><input id="1" type="checkbox" class="box"><a href="/stuff">stuff</a>
-		<ul class="cool">
-<li><a href="/stuff/my-warez" target="_blank">warez</a></li>
-<li><a href="/stuff/games" target="_blank">games</a></li>
-<li><a href="/stuff/tools" target="_blank">tools</a></li>
-		</ul>
-	</li>
         <a href="#">\tech</a>
          
 </div>
@@ -189,6 +183,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
