--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <a href="#">\music</a>
   <a href="https://lycosa.zip">\landing</a>
   <a href="#">\graphics</a>
-  <a href="#">\residents</a>
+  <a href="/residents">\residents</a>
   <a href="/aboutme">\about</a>
         <a href="#">\tech</a>
          
@@ -162,6 +162,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
