--- a/residents.html
+++ b/residents.html
@@ -43,14 +43,8 @@
   </div>
   <div class="window-body">
     <pre>
-▄▄▌  ▪  ▄▄▄▄▄▄▄▄▄▄▄▄▄ .▄▄▄  ▄▄▄▄· ▄• ▄▌ ▄▄ • 
-██•  ██ •██  •██  ▀▄.▀·▀▄ █·▐█ ▀█▪█▪██▌▐█ ▀ ▪
-██▪  ▐█· ▐█.▪ ▐█.▪▐▀▀▪▄▐▀▀▄ ▐█▀▀█▄█▌▐█▌▄█ ▀█▄
-▐█▌▐▌▐█▌ ▐█▌· ▐█▌·▐█▄▄▌▐█•█▌██▄▪▐█▐█▄█▌▐█▄▪▐█
-.▀▀▀ ▀▀▀ ▀▀▀  ▀▀▀  ▀▀▀ .▀  ▀·▀▀▀▀  ▀▀▀ ·▀▀▀▀ 
+<img src="data/images/random/empy3logo.png">
         
-The brains behind it all. Nobody knows what she really
-is, or <i>who</i> she really is, but she started it.
     </pre>
         </div>
   </div>
